# depository-grid

./: .eslintrc.yml  .lintstagedrc.yaml  .prettierrc.yml  build.sh  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
.github/workflows/: deploy.yml
.storybook/: main.ts  preview.ts
scripts/: peggy.sh
server/: Cargo.toml
server/src/: main.rs
src/: dnd.d.ts
src/lib/app/: app.css  fonts.css  page.css
src/lib/editor/: Editor.svelte  EditorLayout.svelte  Paper.svelte  paper.ts
src/lib/editor/items-editor/: AddGroup.svelte  AddItem.svelte  EditGroupForm.svelte  GroupEditor.svelte  ItemEditor.svelte  ItemsEditor.svelte
src/lib/editor/layout/: EditorSection.svelte
src/lib/editor/layout-editor/: LayoutEditor.svelte  LoadButton.svelte  SaveButton.svelte  layout-store.ts
src/lib/editor/preview/: CellPreview.svelte  ItemBox.svelte  ItemPreview.svelte  Paper.svelte  Preview.svelte
src/lib/editor/state/: editor-items.ts  index.ts  items.ts  page-layout.ts  pattern.ts  print-items.ts  store.ts
src/lib/editor/state/parser/: char-pattern-parser.pegjs  char-pattern-parser.ts  num-pattern-parser.pegjs  num-pattern-parser.ts  peggy-config.json
src/lib/editor/state/pattern/: numer-pattern.test.ts  (+5 more)
src/lib/icnos/: TrashIcon.svelte
src/lib/utils/: firm-map.test.ts  firm-map.ts  option.test.ts  option.ts  result.test.ts  result.ts  select-field.test.ts  select-field.ts  select-store.test.ts  select-store.ts  storages.ts  unwrap.ts  zod-utils.ts
src/routes/: +layout.svelte  +page.svelte
src/stories/: Button.svelte  button.stories.svelte
