[package]
name = "depository-grid-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size.
strip = true

[dependencies]
poem = { version = "1", features = ["embed"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust-embed = "6.3"
clap = {version="4", features = ["derive"]}
pnet = "0.34"
